--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1><b>Ahmad Mushtaq Ahmad</b> </h1>
-    <image src="Ahmadi.jpg" alt="my image is here"/>
+    <image src="Ahmad.jpg" alt="my image is here"/>
 
     <div>
         <h2>Qualification </h2>
